Correction de la classe collapse qui etait utilisé par bootstrap

--- a/app/assets/stylesheets/components/_collapsibles.scss
+++ b/app/assets/stylesheets/components/_collapsibles.scss
@@ -1,6 +1,8 @@
-.collapse {
-  display: none;
-  max-height: 0;
-  transition: max-height 1s ease-out;
-  overflow: hidden;
-}
+// .collapse {
+//   display: none;
+//   max-height: 0;
+//   transition: max-height 1s ease-out;
+//   overflow: hidden;
+// }
+
+// Attention , classe collapse est utilisé par bootstrap, ne pas l'utiliser
